--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@sendgrid/mail": "^8.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
